# Gcov-coverage

./: .gitignore  CMakeLists.txt  README.md  dub.sdl  dub.selections.json
cpp_source/: cpp_string.cpp  cpp_string.hpp  testing_linkage.cpp
old_gcda/: old_app.d
source/: app.d  test.c.gcov
